--- a/README.Rmd
+++ b/README.Rmd
@@ -4,22 +4,56 @@ output: github_document
 
 # Learning Shiny
 
-I am on an adventure to learn to code Shiny apps (applications based in R functionality and syntax) to be used as stats learing aids!
+I am on an adventure to learn to code Shiny apps (applications based in R functionality and syntax) to be used as stats learning aids!
 
-## My first app: binomdemo
+# Upcomming
 
-> **Binomial Distribution Demonstration App** 
->  
+* Continuous distribution app using dynamic distribution charactaristics
+* `q*()`, `p*()`, `d*()` demonstration
+* CLT demonstration
+
+# Progress
+
+## An extension with increased complexity: Basic Discrete Distribution Demo
+
+> **short name**: basicdisretedemo  
+> **URL**: [ganovak.shinyapps.io/basicdiscretedemo](https://ganovak.shinyapps.io/basicdiscretedemo/)   
+> **Objective**: Visually demonstrate effect of parameters on support and PMF of commonly used
+discrete distributions  
+> **Input**:    
+>   Discrete Uniform:  
+>       A, B: integer in [0, 100] NOTE: bounds are arbitrary  
+>   Binomial:  
+>       n: integer in [0,100] NOTE: upper bound is arbitrary  
+>       p: real in [0,1]  
+>   Poisson:  
+>       λ: real in (0, ∞)    
+> **Output**: 
+>   Bar plot of PMF of specified distribution with user specified parameters  
+
+### New features
+
+* Tabbed Layout
+* Use of Unicode characters
+* Addition of discrete uniform and Poisson distributions
+* Addition of text elements
+
+```{r, echo = FALSE}
+knitr::include_app("https://ganovak.shinyapps.io/basicdiscretedemo/")
+```
+
+## My first app: Binomial Distribution Demo
+
 > **short name**: binomdemo  
-> **URL**: https://ganovak.shinyapps.io/binomdemo/  
+> **URL**: [ganovak.shinyapps.io/binomdemo](https://ganovak.shinyapps.io/binomdemo/)  
 > **Function**: Visually demonstrate effect of parameters in binomial distribution  
 > **Input**:  
 >   n: integer in [0,100] NOTE: upper bound is arbitrary  
 >   p: real in [0,1]  
-> **Output**: Barplot of PMF of binomial distribution with user specified parameters  
+> **Output**: Bar plot of PMF of binomial distribution with user specified parameters  
 
-```{r, echo = FALSE}
+```{r, echo = FALSE, out.width = 1000}
 knitr::include_app("https://ganovak.shinyapps.io/binomdemo/",
-                   height = "3000px")
+                   height = "4000px")
 ```
 
